After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781073 - list-view: Misplaced context menu on column headers due to deprecated gtk_menu_popup_for_device()
list-view: Misplaced context menu on column headers due to deprecated gtk_men...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: List View
3.24.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-08 23:34 UTC by Volker Sobek (weld)
Modified: 2017-05-02 15:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (1.41 KB, patch)
2017-04-12 18:17 UTC, Evgeny Shulgin
none Details | Review
Patch (1.39 KB, patch)
2017-04-13 13:17 UTC, Evgeny Shulgin
committed Details | Review

Description Volker Sobek (weld) 2017-04-08 23:34:22 UTC
When using Wayland the menu for selecting the visible columns (right clicking on the column headers in the list view) can be misplaced when using two monitors because src/nautilus-list-view.c still uses the deprecated gtk_menu_popup_for_device() instead of the new gtk_menu_popup_at_pointer().
Comment 1 Evgeny Shulgin 2017-04-12 18:17:33 UTC
Created attachment 349743 [details] [review]
Patch
Comment 2 Ernestas Kulik 2017-04-12 19:40:14 UTC
Review of attachment 349743 [details] [review]:

Looks good. Just some nits to pick.

> To fix this we will use a straightforward function.

What is a “straightforward function”? I think the commit message works without that sentence.

The subject line isn’t entirely correct as well. We are replacing the call to the deprecated method, rather than removing the method.

::: src/nautilus-list-view.c
@@ +1458,2 @@
     gtk_widget_show_all (menu);
+    gtk_menu_popup_at_pointer (GTK_MENU(menu), (GdkEvent *) event);

Leave a space after GTK_MENU. We do that for functions and function-like macros.
Comment 3 Evgeny Shulgin 2017-04-13 13:17:16 UTC
Created attachment 349796 [details] [review]
Patch
Comment 4 Ernestas Kulik 2017-04-13 13:31:12 UTC
Review of attachment 349796 [details] [review]:

LGTM
Comment 5 Ernestas Kulik 2017-05-02 15:33:23 UTC
Attachment 349796 [details] pushed e9f56f4 - list-view: Replaced deprecated gtk_menu_popup_for_device()
Comment 6 Ernestas Kulik 2017-05-02 15:33:56 UTC
Oops.

Attachment 349796 [details] pushed as e9f56f4 - list-view: Replaced deprecated gtk_menu_popup_for_device()