list-view: Replaced deprecated gtk_menu_popup_for_device()

When using Wayland the menu for selecting the visible columns (right
clicking on the column headers in the list view) can be misplaced when
using two monitors because src/nautilus-list-view.c still uses the
deprecated gtk_menu_popup_for_device() instead of the new
gtk_menu_popup_at_pointer().

https://bugzilla.gnome.org/show_bug.cgi?id=781073